--- a/index.html
+++ b/index.html
@@ -13,10 +13,8 @@
     <meta property="og:title" content="Brennan Vance - Filmmaker">
     <meta property="og:image" content="http://BrennanVance.com/dist/img/BrennanVance.jpg">
     <meta property="og:description" content="Brennan Vance - Filmmaker">
-    <!-- build:css(.) /dist/css/BrennanVance.min.css-->
-    <link rel="stylesheet" href="/bower_components/normalize.css/normalize.css">
-    <link rel="stylesheet" href="/dist/css/BrennanVance.css">
-    <!-- endbuild-->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Palanquin:100">
+    <link rel="stylesheet" href="/dist/css/BrennanVance.min.89575796.css">
   </head>
   <body>
     <nav class="c-nav">
@@ -26,12 +24,7 @@
       </ul>
     </nav>
     <div ng-view class="c-view"></div>
-    <!-- build:js(.) /dist/js/BrennanVance.min.js-->
-    <script src="/bower_components/angular/angular.js"></script>
-    <script src="/bower_components/angular-route/angular-route.js"></script>
-    <script src="/src/js/BrennanVance.js"></script>
-    <script src="/src/js/Routes.js"></script>
-    <!-- endbuild-->
+    <script src="/dist/js/BrennanVance.min.js"></script>
     <script>
       //- Google Analytics
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
