--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:image" content="http://BrennanVance.com/dist/img/BrennanVance.jpg">
     <meta property="og:description" content="Brennan Vance - Filmmaker">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Palanquin:100">
-    <link rel="stylesheet" href="/dist/css/BrennanVance.min.89575796.css">
+    <link rel="stylesheet" href="dist/css/BrennanVance.min.89575796.css">
   </head>
   <body>
     <nav class="c-nav">
@@ -24,7 +24,7 @@
       </ul>
     </nav>
     <div ng-view class="c-view"></div>
-    <script src="/dist/js/BrennanVance.min.js"></script>
+    <script src="dist/js/BrennanVance.min.e270babc.js"></script>
     <script>
       //- Google Analytics
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
