--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="http://BrennanVance.com">
     <meta property="og:title" content="Brennan Vance - Filmmaker">
-    <meta property="og:image" content="http://BrennanVance.com/dist/img/BrennanVance.jpg">
+    <meta property="og:image" content="http://BrennanVance.com/dist/img/BrennanVance.png">
     <meta property="og:description" content="Brennan Vance - Filmmaker">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Palanquin:100">
     <link rel="stylesheet" href="dist/css/BrennanVance.min.89575796.css">
@@ -24,7 +24,7 @@
       </ul>
     </nav>
     <div ng-view class="c-view"></div>
-    <script src="dist/js/BrennanVance.min.97c2f1c6.js"></script>
+    <script src="dist/js/BrennanVance.min.a3c2a019.js"></script>
     <script>
       //- Google Analytics
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
