Change description and title punctuation

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <title>Brennan Vance - Filmmaker</title>
-    <meta name="description" content="Brennan Vance - Filmmaker">
+    <title>Brennan Vance. Filmmaker.</title>
+    <meta name="description" content="Brennan Vance. Filmmaker.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="http://BrennanVance.com">
-    <meta property="og:title" content="Brennan Vance - Filmmaker">
+    <meta property="og:title" content="Brennan Vance. Filmmaker.">
     <meta property="og:image" content="http://BrennanVance.com/dist/img/BrennanVance.jpg">
-    <meta property="og:description" content="Brennan Vance - Filmmaker">
+    <meta property="og:description" content="Brennan Vance. Filmmaker.">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Palanquin:100">
     <link rel="stylesheet" href="dist/css/BrennanVance.min.89575796.css">
   </head>
